syntax = "proto3";
package Protocol;

option csharp_namespace = "Google.Protobuf.GameProtocol";

enum PacketId {
    C_JOIN = 0;
	C_CANCEL = 1;
	S_RESPONSE = 2;
	S_READY = 3;
    MATCHJOIN = 4;
    MOVEOBJECT = 5;
    CASTSKILL = 6;
    OBJECTDEAD = 7;
    OBJECTIDREQ = 8;
    OBJECTIDRES = 9;
	INSTANTIATEOBJECT = 10;
    UPDATEOBJECTSTATUS = 11;
    ELITESPAWNTIMER = 12;
    RESULT = 13;
}

message C_Join {
}

message C_Cancel {
}

message S_Response {
	bool successed = 1;
}

message S_Ready {
	int32 roomId = 1;
}

message Vector3 {
    float X = 1;
    float Y = 2;
    float Z = 3;
}

message MatchJoin{
    int32 RoomId = 1;
}

message MoveObject {
    int32 ObjectId = 1;
    Vector3 Position = 2;
}

message CastSkill {
    int32 ObjectId = 1;
    int32 SkillId = 2;
    Vector3 Direction = 3;
}

message ObjectDead {
	int32 ObjectId = 1;
}

message ObjectIDReq {
}

message ObjectIDRes {
	int32 ObjectId = 1;
}
message InstantiateObject {
    int32 ObjectId = 1;
    int32 ObjectType = 2;
    int32 HP = 3;
    Vector3 Position = 4;
}
message UpdateObjectStatus {
    int32 ObjectId = 1;
    int32 HP = 2;
}
message EliteSpawnTimer {
    int32 ObjectType = 1;
    float Remains = 2;
}

message Result{
    bool successed = 1;
}